kurang delete
